[package]
name = "rustybit-bittorrent-peer-protocol"
version = "1.0.0"
edition = "2021"
description = "An implementation of bittorrent peer messaging protocol"
authors = ["h33333333"]
license = "Apache-2.0"
repository = "https://github.com/h33333333/rustybit"

[dependencies]
tokio = { version = "1", features = ["io-util"] }
bitvec = "1.0.1"
bytes = "1.5.0"
thiserror = "1.0"
