[package]
name = "leechy-dht"
version = "0.1.0"
edition = "2021"

[dependencies]
serde_bencode.workspace = true
tokio = { version = "1", features = ["net", "sync", "time", "macros"] }
serde = { version = "1.0", features = ["derive"] }
anyhow = "^1.0.8"
tracing = "0.1.40"
rand = "0.8.5"
serde_bytes = "0.11.15"
governor = "^0.6.3"
