[package]
name = "rustybit"
version = "2.0.0"
edition = "2021"
description = "A CLI bittorrent client"
authors = ["h33333333"]
categories = ["command-line-utilities"]
keywords = ["cli", "client", "bittorrent"]
license = "Apache-2.0"
readme = "README.md"
repository = "https://github.com/h33333333/rustybit"
documentation = "https://github.com/h33333333/rustybit"

[dependencies]
rustybit-lib.workspace = true
serde_bencode.workspace = true
clap = { version = "4.3.14", features = ["derive", "string"] }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
anyhow = "^1.0.8"
tokio = { version = "1", features = [
    "fs",
    "net",
    "io-util",
    "macros",
    "rt-multi-thread",
] }
